--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,10 @@
     "monolog/monolog": "^2.0|^3.0",
     "symfony/validator": "^5.0|^6.0",
     "nesbot/carbon": "^2.0",
-    "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/console": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
-    "illuminate/events": "^8.0|^9.0|^10.0|^11.0"
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/console": "^8.0|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/events": "^8.0|^9.0|^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
@@ -86,7 +86,7 @@
       "php-http/discovery": true
     }
   },
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "prefer-stable": true,
   "funding": [
     {
