--- a/composer.json
+++ b/composer.json
@@ -33,18 +33,11 @@
     "email": "support@innochannel.com"
   },
   "require": {
-    "php": ">=7.4",
-    "ext-json": "*",
-    "ext-curl": "*",
+    "php": "^8.1",
     "guzzlehttp/guzzle": "^7.0",
     "firebase/php-jwt": "^6.0",
-    "monolog/monolog": "^2.0|^3.0",
-    "symfony/validator": "^5.0|^6.0",
-    "nesbot/carbon": "^2.0",
-    "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
-    "illuminate/console": "^8.0|^9.0|^10.0|^11.0|^12.0",
-    "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
-    "illuminate/events": "^8.0|^9.0|^10.0|^11.0|^12.0"
+    "nesbot/carbon": "^2.0|^3.0",
+    "laravel/framework": "^8.0|^9.0|^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
