--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,10 @@
     "php": "^8.1",
     "guzzlehttp/guzzle": "^7.0",
     "firebase/php-jwt": "^6.0",
-    "nesbot/carbon": "^2.0|^3.0",
-    "laravel/framework": "^8.0|^9.0|^10.0|^11.0|^12.0"
+    "nesbot/carbon": "^2.0|^3.0"
+  },
+  "suggest": {
+    "laravel/framework": "^8.0|^9.0|^10.0|^11.0|^12.0 for Laravel integration"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
