refactor: rename booking to reservation across codebase
- Update config, routes, models, and services to use 'reservation' terminology
- Replace booking-related environment variables and documentation
- Modify database migrations and tests to reflect naming changes
- Ensure all references to booking are updated consistently

--- a/.env.example
+++ b/.env.example
@@ -60,11 +60,11 @@ INNOCHANNEL_RATE_LIMIT_RPM=60
 INNOCHANNEL_RATE_LIMIT_BURST=10
 
 # =============================================================================
-# Service Configuration - Booking
+# Service Configuration - RESERVATION
 # =============================================================================
-INNOCHANNEL_BOOKING_AUTO_SYNC=true
-INNOCHANNEL_BOOKING_SYNC_DIRECTION=both
-INNOCHANNEL_BOOKING_VALIDATION_STRICT=true
+INNOCHANNEL_RESERVATION_AUTO_SYNC=true
+INNOCHANNEL_RESERVATION_SYNC_DIRECTION=both
+INNOCHANNEL_RESERVATION_VALIDATION_STRICT=true
 
 # =============================================================================
 # Service Configuration - Property
@@ -101,12 +101,12 @@ INNOCHANNEL_TEST_MODE=false
 # =============================================================================
 # Event System Configuration (Advanced)
 # =============================================================================
-# Booking Events
-INNOCHANNEL_BOOKING_CREATED_ENABLED=true
-INNOCHANNEL_BOOKING_UPDATED_ENABLED=true
-INNOCHANNEL_BOOKING_CANCELLED_ENABLED=true
-INNOCHANNEL_BOOKING_CONFIRMED_ENABLED=true
-INNOCHANNEL_BOOKING_DELETED_ENABLED=true
+# RESERVATION Events
+INNOCHANNEL_RESERVATION_CREATED_ENABLED=true
+INNOCHANNEL_RESERVATION_UPDATED_ENABLED=true
+INNOCHANNEL_RESERVATION_CANCELLED_ENABLED=true
+INNOCHANNEL_RESERVATION_CONFIRMED_ENABLED=true
+INNOCHANNEL_RESERVATION_DELETED_ENABLED=true
 
 # Property Events
 INNOCHANNEL_PROPERTY_CREATED_ENABLED=true
