--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "nesbot/carbon": "^2.0|^3.0"
   },
   "suggest": {
-    "laravel/framework": "^8.0|^9.0|^10.0|^11.0|^12.0 for Laravel integration"
+    "laravel/framework": "^8.0|^9.0|^10.0|^11.0|^12.0 for Laravel integration",
+    "laravel/telescope": "^4.0|^5.0 for debugging and monitoring HTTP requests"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
